--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+cmake_install.cmake
+CMakeCache.txt
+Makefile
+bin
+CMakeFiles
+.vscode
+gdb
